# src/api/features/auth/auth.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 
 import { prisma } from "@/libs/prisma";
+import { adminJwtAuthGuard } from "@/middlewares/auth";
 import { HttpRequestValidator } from "@/middlewares/http-request-validator";
 
 import { UserRepositoryImpl, UserServiceImpl } from "../user";
@@ -17,7 +18,17 @@ const authService = new AuthServiceImpl(userService);
 const authController = new AuthControllerImpl(authService);
 
 router
-  .post("/register", HttpRequestValidator.validate(authCreationSchema), authController.signup)
+  .post(
+    "/register",
+    HttpRequestValidator.validate(authCreationSchema),
+    authController.signup(false),
+  )
+  .post(
+    "/admin",
+    HttpRequestValidator.validate(authCreationSchema),
+    adminJwtAuthGuard,
+    authController.signup(true),
+  )
   .post("/login", HttpRequestValidator.validate(authLoginSchema), authController.login);
 
 export default router;
